--- a/kitty.conf
+++ b/kitty.conf
@@ -1484,13 +1484,13 @@
 #: Scroll line up
 
  map kitty_mod+up    scroll_line_up
- map shift+k     scroll_line_up
+ # map shift+k     scroll_line_up
  map cmd+up          scroll_line_up
 
 #: Scroll line down
 
  map kitty_mod+down    scroll_line_down
- map shift+j       scroll_line_down
+ # map shift+j       scroll_line_down
  map cmd+down          scroll_line_down
 
 #: Scroll page up
