--- a/kitty.conf
+++ b/kitty.conf
@@ -1400,8 +1400,8 @@
 #: available here </actions>.
 
 
- kitty_mod ctrl
-# kitty_mod ctrl+shift
+ # kitty_mod ctrl
+kitty_mod ctrl+shift
 
 #: The value of kitty_mod is used as the modifier for all default
 #: shortcuts, you can change it in your kitty.conf to change the
@@ -1453,6 +1453,7 @@
 
 #: Paste from clipboard
 
+ map ctrl+v paste_from_clipboard
  map kitty_mod+v paste_from_clipboard
 
 #: Paste from selection
