--- a/kitty.conf
+++ b/kitty.conf
@@ -186,7 +186,7 @@
 #: special keyword: background. Note that if cursor is set to none
 #: then this setting is ignored.
 
- cursor_shape block 
+ cursor_shape underline 
 
 #: The cursor shape can be one of (block, beam, underline). Note that
 #: when reloading the config this will be changed only if the cursor
@@ -294,7 +294,7 @@
 #: The color and style for highlighting URLs on mouse-over. url_style
 #: can be one of: none, straight, double, curly, dotted, dashed
 
- open_url_with qutebrowser
+ open_url_with default
 
 #: The program with which to open URLs that are clicked on. The
 #: special value default means to use the operating system's default
